add application and scope write and validation logic

--- a/OpenIddict.Api.Validation/OpenIddict.Api.Validation.csproj
+++ b/OpenIddict.Api.Validation/OpenIddict.Api.Validation.csproj
@@ -17,8 +17,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="FluentValidation" Version="11.*" />
-      <PackageReference Include="OpenIddict.Abstractions" Version="4.*" />
+      <PackageReference Include="FluentValidation" Version="10.*" />
+      <PackageReference Include="OpenIddict.Abstractions" Version="3.0" />
     </ItemGroup>
 
     <ItemGroup>
