--- a/OpenIddict.Api.Models/OpenIddict.Api.Models.csproj
+++ b/OpenIddict.Api.Models/OpenIddict.Api.Models.csproj
@@ -16,4 +16,8 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="OpenIddict.Abstractions" Version="3.0" />
+    </ItemGroup>
+
 </Project>
