--- a/OpenIddict.Api/OpenIddict.Api.csproj
+++ b/OpenIddict.Api/OpenIddict.Api.csproj
@@ -18,8 +18,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2" />
-        <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.*" />
-        <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="4.*" />
+        <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.0" />
+        <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="3.0" />
     </ItemGroup>
 
     <ItemGroup>
