--- a/OpenIddict.Api.Models/OpenIddict.Api.Models.csproj
+++ b/OpenIddict.Api.Models/OpenIddict.Api.Models.csproj
@@ -17,6 +17,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="OpenIddict.Abstractions" Version="3.0" />
     </ItemGroup>
 
