--- a/OpenIddict.Api.Validation/OpenIddict.Api.Validation.csproj
+++ b/OpenIddict.Api.Validation/OpenIddict.Api.Validation.csproj
@@ -18,6 +18,10 @@
 
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="10.*" />
+      <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="OpenIddict.Abstractions" Version="3.0" />
     </ItemGroup>
 
