--- a/OpenIddict.Api/OpenIddict.Api.csproj
+++ b/OpenIddict.Api/OpenIddict.Api.csproj
@@ -18,6 +18,10 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="3.0" />
         <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="3.0" />
     </ItemGroup>
